--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "engines": {"node": "v14.18.1",
-    "npm": "7.6.2"}
-
+  "engines": {
+    "node": "v14.18.1",
+    "npm": "7.6.2"
+  }
 }
-
